[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-mm-pool"
version = "0.1.0"

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
frame-support = {workspace = true}
sp-io = { workspace = true }
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-whitelists = { path = "../eq-whitelists", default-features = false, optional = true }
eq-assets = { path = "../eq-assets", default-features = false }
eq-oracle = { path = "../eq-oracle", default-features = false }
eq-balances = { path = "../eq-balances", default-features = false }
eq-aggregates = { path = "../eq-aggregates", default-features = false }
eq-dex = { path = "../eq-dex", default-features = false }

[dependencies.codec]
package = "parity-scale-codec"
version = "3.0.0"
default-features = false
features = ["derive"]

[dependencies.serde]
version = "1.0.123"
optional = true

[dev-dependencies.sp-core]
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.eq-dex]
package = "eq-dex"
path = "../eq-dex"
version = "0.1.0"

[dev-dependencies.eq-rate]
package = "eq-rate"
path = "../eq-rate"
version = "0.1.0"

[dev-dependencies.session]
package = "pallet-session"
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.test-utils]
default-features = false
package = "test-utils"
path = "../../test-utils"
version = "0.1.0"

[dev-dependencies.authorship]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"
package = "pallet-authorship"

[dev-dependencies.financial-pallet]
default-features = false
git = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet"
branch = "release-polkadot-v1.1.0"
package = "financial-pallet"
version = "0.1.0"

[dev-dependencies.financial-primitives]
default-features = false
git = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet"
branch = "release-polkadot-v1.1.0"
package = "financial-primitives"
version = "0.1.0"

[dev-dependencies.substrate-fixed]
git = "https://github.com/equilibrium-eosdt/substrate-fixed"
branch = "scale-info-2.0.1"
package = "substrate-fixed"

[features]
default = ["std"]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-io/std",
  "serde",
  "eq-utils/std",
  "eq-primitives/std",
  "frame-benchmarking/std",
  "eq-assets/std",
  "eq-aggregates/std",
  "eq-balances/std",
  "eq-dex/std",
  "eq-oracle/std",
  "sp-arithmetic/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "eq-whitelists",
]
try-runtime = [
  "frame-support/try-runtime",
]
