[package]
authors=["equilibrium"]
name = "eq-multisig-sudo"
version = "0.1.0"
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
serde = {version = "1.0.123", default-features = false, optional = true}
serde_json = {git = "https://github.com/nikvolf/json", default-features = false, features = ["alloc"]}
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = {workspace = true}
eq-utils = { path = "../../eq-utils", default-features = false }
sp-io = { workspace = true }
sp-core = { workspace = true }

[dev-dependencies.eq-primitives]
package = "eq-primitives"
path = "../../eq-primitives"
version = "0.1.0"


[features]
default = ["std"]
std = [
	"log/std",
	"serde",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-core/std",
	"frame-support/std",
	"frame-system/std",
	"eq-utils/std",
  "frame-benchmarking/std",
]
runtime-benchmarks = [
  "frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
]
