[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-oracle"
version = "0.1.0"


[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
impl-trait-for-tuples = "0.1.3"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
regex-automata = {version = "0.1", default-features = false}
safe-mix = {default-features = false, version = "1.0.0"}
serde = {version = "1.0.123", default-features = false}
serde_json = {git = "https://github.com/nikvolf/json", default-features = false, features = ["alloc"]}
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

[dependencies.sp-arithmetic]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"
default-features = false

[dependencies.eq-whitelists]
default-features = false
package = "eq-whitelists"
path = "../eq-whitelists"
version = "0.1.0"

[dependencies.eq-utils]
default-features = false
package = "eq-utils"
path = "../../eq-utils"
version = "0.1.0"

[dependencies.eq-primitives]
default-features = false
package = "eq-primitives"
path = "../../eq-primitives"
version = "0.1.0"

[dependencies.eq-assets]
default-features = false
package = "eq-assets"
path = "../eq-assets"
version = "0.1.0"

[dev-dependencies.eq-lending]
default-features = false
package = "eq-lending"
path = "../eq-lending"
version = "0.1.0"

[dependencies.financial-pallet]
default-features = false
git = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet"
branch = "polkadot-v0.9.42"
package = "financial-pallet"
version = "0.1.2"

[dependencies.financial-primitives]
default-features = false
git = "https://github.com/equilibrium-eosdt/equilibrium-financial-pallet"
branch = "polkadot-v0.9.42"
package = "financial-primitives"
version = "0.1.0"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"
package = "frame-system"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"
default-features = false

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"

[dependencies.sp-std]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"
default-features = false

[dependencies.timestamp]
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"
default-features = false
package = "pallet-timestamp"

[dependencies.substrate-fixed]
git = "https://github.com/equilibrium-eosdt/substrate-fixed"
branch = "scale-info-2.0.1"
package = "substrate-fixed"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"
optional = true
package = "frame-benchmarking"

[dependencies.equilibrium-curve-amm]
default-features = false
git = "https://github.com/equilibrium-eosdt/equilibrium-curve-amm"
branch = "polkadot-v0.9.42"
package = "equilibrium-curve-amm"
version = "0.2.3"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.42"


[features]
default = ["std"]
std = [
  "log/std",
  "codec/std",
  "sp-io/std",
  "sp-core/std",
  "sp-std/std",
  "timestamp/std",
  "frame-support/std",
  "safe-mix/std",
  "frame-system/std",
  "sp-runtime/std",
  "serde/std",
  "serde_json/std",
  "eq-whitelists/std",
  "eq-utils/std",
  "eq-primitives/std",
  "eq-lending/std",
  "financial-pallet/std",
  "financial-primitives/std",
  "eq-assets/std",
  "equilibrium-curve-amm/std",
]
production = []
runtime-benchmarks = [
  "frame-benchmarking",
]
try-runtime = [
  "frame-support/try-runtime",
]
