[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-oracle"
version = "0.1.0"


[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
sp-core = { workspace = true }
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
impl-trait-for-tuples = "0.1.3"
lazy_static = {version = "1.4.0", features = ["spin_no_std"]}
regex-automata = {version = "0.1", default-features = false}
safe-mix = {default-features = false, version = "1.0.0"}
serde = {version = "1.0.123", default-features = false}
serde_json = {git = "https://github.com/nikvolf/json", default-features = false, features = ["alloc"]}
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = {workspace = true}
substrate-fixed = { workspace = true }
financial-pallet = { workspace = true }
financial-primitives = { workspace = true }
pallet-timestamp = { workspace = true }
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-whitelists = { path = "../eq-whitelists", default-features = false }
eq-assets = { path = "../eq-assets", default-features = false }
sp-io = { workspace = true }
equilibrium-curve-amm = { workspace = true }

[dev-dependencies.eq-lending]
default-features = false
package = "eq-lending"
path = "../eq-lending"
version = "0.1.0"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[features]
default = ["std"]
std = [
  "log/std",
  "codec/std",
  "sp-io/std",
  "sp-core/std",
  "sp-std/std",
  "pallet-timestamp/std",
  "frame-support/std",
  "safe-mix/std",
  "frame-system/std",
  "sp-runtime/std",
  "serde/std",
  "serde_json/std",
  "eq-whitelists/std",
  "eq-utils/std",
  "eq-primitives/std",
  "eq-lending/std",
  "financial-pallet/std",
  "financial-primitives/std",
  "eq-assets/std",
  "equilibrium-curve-amm/std",
]
production = []
runtime-benchmarks = [
  "frame-benchmarking",
]
try-runtime = [
  "frame-support/try-runtime",
]
