[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-rate"
version = "0.1.0"


[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
safe-mix = {default-features = false, version = "1.0.0"}
serde = {version = "1.0.123", default-features = false, optional = true}
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

[dependencies.authorship]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
package = "pallet-authorship"

[dependencies.eq-utils]
default-features = false
package = "eq-utils"
path = "../../eq-utils"
version = "0.1.0"

[dependencies.eq-primitives]
default-features = false
package = "eq-primitives"
path = "../../eq-primitives"
version = "0.1.0"

[dependencies.eq-assets]
default-features = false
package = "eq-assets"
path = "../eq-assets"
version = "0.1.0"

[dependencies.eq-balances]
default-features = false
package = "eq-balances"
path = "../eq-balances"
version = "0.1.0"

[dependencies.eq-session-manager]
default-features = false
package = "eq-session-manager"
path = "../eq-session-manager"
version = "0.1.0"

[dev-dependencies.eq-lending]
default-features = false
package = "eq-lending"
path = "../eq-lending"
version = "0.1.0"

[dev-dependencies.eq-bailsman]
default-features = false
package = "eq-bailsman"
path = "../eq-bailsman"
version = "0.1.0"

[dev-dependencies.eq-margin-call]
default-features = false
package = "eq-margin-call"
path = "../eq-margin-call"
version = "0.1.0"

[dependencies.financial-pallet]
default-features = false
git = "ssh://git@gitlab.equilab.io/eqlab/substrate/financial-pallet.git"
branch = "polkadot-v0.9.29"
package = "financial-pallet"
version = "0.1.2"

[dependencies.financial-primitives]
default-features = false
git = "ssh://git@gitlab.equilab.io/eqlab/substrate/financial-pallet.git"
branch = "polkadot-v0.9.29"
package = "financial-primitives"
version = "0.1.0"

[dependencies.pallet-session]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.frame-support]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.frame-system]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
package = "frame-system"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.sp-std]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.sp-arithmetic]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.sp-application-crypto]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"

[dependencies.substrate-fixed]
git = "https://github.com/equilibrium-eosdt/substrate-fixed"
branch = "scale-info-2.0.1"
package = "substrate-fixed"

[dependencies.timestamp]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
package = "pallet-timestamp"

[dependencies.frame-benchmarking]
default-features = false
git = "https://github.com/paritytech/substrate"
branch = "polkadot-v0.9.29"
optional = true
package = "frame-benchmarking"

[dependencies.eq-whitelists]
default-features = false
package = "eq-whitelists"
path = "../eq-whitelists"
version = "0.1.0"
optional = true

[dependencies.eq-subaccounts]
default-features = false
package = "eq-subaccounts"
path = "../eq-subaccounts"
version = "0.1.0"
optional = true

[dependencies.test-utils]
default-features = false
package = "test-utils"
path = "../../test-utils"
version = "0.1.0"
optional = true

[dependencies.eq-oracle]
default-features = false
package = "eq-oracle"
path = "../eq-oracle"
version = "0.1.0"
optional = true

[dev-dependencies.eq-aggregates]
default-features = false
package = "eq-aggregates"
path = "../eq-aggregates"
version = "0.1.0"


[features]
default = ["std"]
std = [
  "log/std",
  "codec/std",
  "frame-support/std",
  "safe-mix/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-application-crypto/std",
  "sp-std/std",
  "sp-core/std",
  "sp-io/std",
  "serde/std",
  "pallet-session/std",
  "eq-utils/std",
  "eq-margin-call/std",
  "eq-primitives/std",
  "eq-balances/std",
  "eq-bailsman/std",
  "sp-arithmetic/std",
  "eq-whitelists/std",
  "eq-subaccounts/std",
  "eq-lending/std",
  "timestamp/std",
  "eq-session-manager/std",
  "financial-pallet/std",
  "financial-primitives/std",
  "substrate-fixed/std",
  "authorship/std",
]
production = []
runtime-benchmarks = [
  "frame-benchmarking",
  "eq-whitelists/runtime-benchmarks",
  "eq-subaccounts/runtime-benchmarks",
  "test-utils",
  "eq-oracle",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "eq-primitives/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
]
