[package]
authors = ["user <veniaminhrapov@gmail.com>"]
edition = "2018"
name = "eq-rate"
version = "0.1.0"

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
safe-mix = {default-features = false, version = "1.0.0"}
serde = {version = "1.0.123", default-features = false, optional = true}
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
frame-support = {workspace = true}
substrate-fixed = { workspace = true }
financial-pallet = { workspace = true }
financial-primitives = { workspace = true }
sp-core = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-session = { workspace = true }
sp-application-crypto = { workspace = true }
sp-io = { workspace = true }
pallet-authorship = { workspace = true }
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
eq-whitelists = { path = "../eq-whitelists", default-features = false, optional = true }
eq-assets = { path = "../eq-assets", default-features = false }
eq-oracle = { path = "../eq-oracle", default-features = false, optional = true }
eq-balances = { path = "../eq-balances", default-features = false }
eq-session-manager = { path = "../eq-session-manager", default-features = false }
eq-subaccounts = { path = "../eq-subaccounts", default-features = false, optional = true }
test-utils = { path = "../../test-utils", default-features = false, optional = true }

[dev-dependencies.eq-lending]
default-features = false
package = "eq-lending"
path = "../eq-lending"
version = "0.1.0"

[dev-dependencies.eq-bailsman]
default-features = false
package = "eq-bailsman"
path = "../eq-bailsman"
version = "0.1.0"

[dev-dependencies.eq-margin-call]
default-features = false
package = "eq-margin-call"
path = "../eq-margin-call"
version = "0.1.0"

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-io]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.eq-aggregates]
default-features = false
package = "eq-aggregates"
path = "../eq-aggregates"
version = "0.1.0"

[features]
default = ["std"]
std = [
  "log/std",
  "codec/std",
  "frame-support/std",
  "safe-mix/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-application-crypto/std",
  "sp-std/std",
  "sp-core/std",
  "sp-io/std",
  "serde/std",
  "pallet-session/std",
  "eq-utils/std",
  "eq-margin-call/std",
  "eq-primitives/std",
  "eq-balances/std",
  "eq-bailsman/std",
  "sp-arithmetic/std",
  "eq-whitelists/std",
  "eq-subaccounts/std",
  "eq-lending/std",
  "pallet-timestamp/std",
  "eq-session-manager/std",
  "financial-pallet/std",
  "financial-primitives/std",
  "substrate-fixed/std",
  "pallet-authorship/std",
]
production = []
runtime-benchmarks = [
  "frame-benchmarking",
  "eq-whitelists/runtime-benchmarks",
  "eq-subaccounts/runtime-benchmarks",
  "test-utils",
  "eq-oracle",
  "frame-support/runtime-benchmarks",
  "frame-system/runtime-benchmarks",
  "eq-primitives/runtime-benchmarks",
]
try-runtime = [
  "frame-support/try-runtime",
]
