[package]
name = "eq-staking"
authors = ["equilibrium"]
edition = "2018"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support = { workspace = true }
sp-core = { workspace = true }
pallet-timestamp = { workspace = true, optional = true }

eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-assets = { path = "../eq-assets", default-features = false, optional = true }
eq-utils = { path = "../../eq-utils", default-features = false, optional = true }
eq-rate = { path = "../eq-rate", default-features = false, optional = true }
eq-balances = { path = "../eq-balances", default-features = false, optional = true }

[dev-dependencies]
sp-io = { workspace = true }
eq-balances = { path = "../eq-balances" }
eq-assets = { path = "../eq-assets" }
eq-utils = { path = "../../eq-utils" }
pallet-timestamp = { workspace = true }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-core/std",
	"sp-std/std",
	"eq-primitives/std",
]
production = []
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"eq-utils",
	"eq-balances/runtime-benchmarks",
	"eq-assets/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"eq-rate/runtime-benchmarks"
]
try-runtime = ["frame-support/try-runtime"]
