[package]
authors = ["Artem Sevostianov <artem.sevos@gmail.com>"]
edition = "2018"
name = "eq-subaccounts"
version = "0.1.0"

[dependencies]
sp-arithmetic = {workspace = true}
sp-runtime = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking={workspace = true, optional = true}
frame-system = {workspace = true}
pallet-timestamp = { workspace = true }
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
safe-mix = {default-features = false, version = "1.0.0"}
serde = {version = "1.0.123", optional = true}
log = { version = "0.4.17", default-features = false }
sp-io = { workspace = true }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

frame-support = {workspace = true}
eq-primitives = { path = "../../eq-primitives", default-features = false }
eq-utils = { path = "../../eq-utils", default-features = false }
substrate-fixed = { workspace = true }
eq-whitelists = { path = "../eq-whitelists", default-features = false }
eq-assets = { path = "../eq-assets", default-features = false }
eq-oracle = { path = "../eq-oracle", default-features = false, optional = true }
eq-balances = { path = "../eq-balances", default-features = false }
eq-aggregates = { path = "../eq-aggregates", default-features = false }
eq-bailsman = { path = "../eq-bailsman", default-features = false, optional = true }

[dev-dependencies.sp-core]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[dev-dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/polkadot-sdk"
branch = "release-polkadot-v1.1.0"

[features]
default = ["std"]
std = [
  "log/std",
  "serde",
  "codec/std",
  "frame-support/std",
  "safe-mix/std",
  "frame-system/std",
  "sp-arithmetic/std",
  "sp-std/std",
  "sp-runtime/std",
  "eq-primitives/std",
  "eq-balances/std",
  "eq-aggregates/std",
  "eq-assets/std",
  "eq-bailsman/std",
  "pallet-timestamp/std",
  "eq-whitelists/std",
]
production = []
runtime-benchmarks = [
  "frame-benchmarking",
  "eq-oracle",
  "eq-bailsman",
]
try-runtime = [
  "frame-support/try-runtime",
]
